Fixed wrapping and made images level

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     flex:1;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
     border: 5px solid black;
